<resources>
    <string name="app_name">Healthway - BMI Tracker</string>
    <string name="height">Height (m)</string>
    <string name="weight">Weight (kg)</string>
    <string name="age">Age</string>
    <string name="start">Start</string>
    <string name="view_bmi">Continue</string>
    <string name="add_new_bmi">Please add a new BMI</string>
    <string name="title_activity_results">Your BMI</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="title_progress">Your Progress</string>
    <string name="bmi_categories"><b>BMI Categories:</b> </string>
    <string name="categories_list">Underweight =&lt; 18.5\nNormal weight = 18.5–24.9\nOverweight = 25–29.9\nObesity = BMI of 30 or greater</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="food_info">Food Info</string>
    <string name="graph">Graph</string>
    <string name="progress">Progress</string>
    <string name="about">About</string>
    <string name="about_app">Currently aware of potential danger in people\'s lives we wanted to make an application which would provide adequate information and ways to improve current lifestyle.The app is very easy to use. Basically users need to type only three information: height, weight and age.With those information provided the application will calculate user\'s BMI and possibly represent a better way of lifestyle according to user\'s BMI.</string>
    <string name="dev_names">This app was developed at the Geekfest 2017 event by the following developers: Amina Šiljak, Anes Memišević, Ema Vučina, Hamza Parnica, Kerim Nurikić and Sead Smailagić.</string>
    <string name="action_settings">Settings</string>
    <string name="title_diet"><b>Food and Diet</b></string>
    <string name="underweight">You are underweight</string>
    <string name="normal_weight">Your weight is good</string>
    <string name="overweight">You are overweight</string>
    <string name="obese">You are obese</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fiber">Fiber</string>
    <string name="calcium">Calcium</string>
    <string name="protein_text">Protein gives us the energy to get up and go—and keep going—while also supporting mood and cognitive function. Too much protein can be harmful to people with kidney disease, but the latest research suggests that many of us need more high-quality protein, especially as we age.  </string>
    <string name="fat_text">Not all fat is the same. While bad fats can wreck your diet and increase your risk of certain diseases, good fats protect your brain and heart. In fact, healthy fats—such as omega-3s—are vital to your physical and emotional health. </string>
    <string name="carbohydrate_text">Carbohydrates are one of your body’s main sources of energy. But most should come from complex, unrefined carbs (vegetables, whole grains, fruit) rather than sugars and refined carbs that have been stripped of all bran, fiber, and nutrients. </string>
    <string name="fiber_text">Eating foods high in dietary fiber (grains, fruit, vegetables, nuts, and beans) can help you stay regular and lower your risk for heart disease, stroke, and diabetes. It can also improve your skin and even help you to lose weight. Depending on your age and gender, nutrition experts recommend you eat at least 21 to 38 grams of fiber each day for optimal health.</string>
    <string name="calcium_text">Your body uses calcium to build healthy bones and teeth, keep them strong as you age, send messages through the nervous system, and regulate the heart’s rhythm. As well as leading to osteoporosis, not getting enough calcium in your diet can also contribute to anxiety, depression, and sleep difficulties.</string>
</resources>
