<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/progress"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/progress" />
        <item
            android:id="@+id/graph"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/graph" />
        <item
        android:id="@+id/hints_and_info"
        android:icon="@drawable/ic_food_black"
        android:title="@string/food_info" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />

    </group>

</menu>
