<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".InfoActivity"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_diet"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/protein"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="174dp"
                        android:src="@drawable/protein"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protein_text"
                        android:textSize="10sp"
                        android:textColor="#000000"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingLeft="20dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/fat"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="174dp"
                        android:src="@drawable/fat"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fat_text"
                        android:textSize="10sp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingLeft="20dp"/>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/carbohydrates"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="174dp"
                        android:src="@drawable/carbohydrates"
                        android:layout_alignParentLeft="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carbohydrate_text"
                        android:textSize="10sp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/fiber"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="174dp"
                        android:src="@drawable/fiber"
                        android:layout_alignParentLeft="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fiber_text"
                        android:textSize="10sp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingLeft="20dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/calcium"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="174dp"
                        android:src="@drawable/calcium"
                        android:layout_alignParentLeft="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calcium_text"
                        android:textSize="10sp"
                        android:textColor="#000000"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingLeft="20dp"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
