<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.iuslab.bmitracker.ResultsActivity"
    tools:showIn="@layout/app_bar_results">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/bmi_block"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="45sp"
                android:text="@string/your_bmi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="13dp"
                android:textSize="50sp"
                android:id="@+id/the_bmi" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bmi_block"
            android:layout_centerHorizontal="true"
            android:id="@+id/bmi_info"
            android:layout_marginTop="35dp"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/rte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmi_info"
            android:gravity="center"
            android:text="@string/categories_list"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_marginTop="150dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_categories"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
